--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <button id="submit">Submit Guess</button>
       </div>
       <div>
-        <p class="message" id="number-of-guesses"></p>
+        <p class="message" id="num-of-guesses"></p>
+        <p class="message" id="under-one">Must be greater than 0</p>
+        <p class="message" id="over-ninetynine">Must be under 100</p>
         <p class="message" id="too-high">You guessed too high. Try again.</p>
         <p class="message" id="too-low">You guessed too low. Try again.</p>
         <p class="message" id="max-guesses">
